<resources>
    <string name="app_name">SeoulCatcher</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">"OK"</string>
    <string name="profile">"Profile"</string>
    <string name="setting">"Setting"</string>
    <string name="education">"Education"</string>
    <string name="educationSchedule">"Schedule"</string>
    <string name="history">"History"</string>
    <string name="cancel">"Cancel"</string>
    <string name="modify">"Modify"</string>
    <string name="basics">"Basics"</string>
    <string name="name">"Name"</string>
    <string name="email">"Email"</string>
    <string name="phone">"Phone"</string>
    <string name="start">"Start"</string>
    <string name="qr">"QR"</string>
    <string name="certified">"Certified"</string>
    <string name="account">"Account"</string>

    <string name="log_out">"Log out"</string>
    <string name="member_ship">"MemberShip"</string>
    <string name="nick_name">"Nick Name"</string>
    <string name="personal_information">"Personal information"</string>
    <string name="education_schedule">"Education schedule"</string>
    <string name="level_text">"Level %s"</string>
    <string name="edit_image">"Edit Image"</string>

    <string name="percent_type">"%"</string>

    <string name="days_ago">" days ago"</string>
    <string name="days_remaining">" days remaining"</string>

    <string name="member_ship_user_level">"%s is\n a member of level %s."</string>
    <string name="check_qr_code">"Check QR code"</string>


    <!--hint-->
    <string name="hint_email">"Please enter a email."</string>
    <string name="hint_phone">"Please enter a phone."</string>
    <string name="hint_name">"Please enter a name."</string>
    <string name="hint_title">"Please enter a title."</string>
    <string name="hint_content">"Please enter a content."</string>

    <!--guide-->
    <string name="msg_quit">"Pressing the "back" button ends."</string>
    <string name="msg_attendance">"Successfully attended. "</string>
    <string name="msg_logout">"Are you sure you want to log out?"</string>

    <!--empty-->
    <string name="empty_title">"Get Started"</string>
    <string name="empty_profile">"There is no education schedule you have applied for.\nPlease apply for a new education."</string>

    <!--error-->
    <string name="error_permission">"Permissions must be allowed to use."</string>
    <string name="network_error">"Please check the status of the network."</string>
    <string name="error_email">"Please enter a valid email."</string>
    <string name="error_phone">"Please enter a valid phone number."</string>
</resources>
