<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_educationSchedule"
        android:icon="@drawable/ic_calendar"
        android:title="@string/educationSchedule" />
    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/ic_local_library_black_24dp"
        android:title="@string/education" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_medical_history"
        android:title="@string/history" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/setting" />

</menu>
