<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="EmailPhoneEditBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="todday.funny.seoulcatcher.viewmodel.EmailPhoneEditViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/layout_main"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:onClick="@{() -> model.close()}"
                    android:padding="16dp"
                    app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@{model.mTitle}"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <!--Email-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="@{model.mEmailVisible? View.VISIBLE:View.GONE}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_email_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/email" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:singleLine="true"
                        android:text="@string/error_email"
                        android:textColor="@color/error"
                        android:textSize="10sp"
                        android:visibility="@{model.mErrorEmail ? View.VISIBLE:View.GONE}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edit"
                        android:hint="@string/hint_email"
                        android:inputType="text"
                        android:onTextChanged="@{(text, start, before, count)->model.onTextChange(text,model.EDIT_EMAIL_TYPE)}"
                        android:paddingBottom="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="12dp"
                        android:privateImeOptions="defaultInputmode=english;symbol=false"
                        android:singleLine="true"
                        android:text="@{model.mUser.email}"
                        android:textSize="10sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/background_btn_main"
                        android:enabled="@{model.mEmailConfirm ? false:true}"
                        android:foreground="?android:selectableItemBackground"
                        android:onClick="@{()->model.certifiedEmail()}"
                        android:padding="12dp"
                        android:text="@string/certified"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>
            <!--Phone-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="@{model.mPhoneVisible? View.VISIBLE:View.GONE}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_phone_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:text="@string/phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:singleLine="true"
                        android:text="@string/error_phone"
                        android:textColor="@color/error"
                        android:textSize="10sp"
                        android:visibility="@{model.mErrorPhone ? View.VISIBLE:View.GONE}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/background_edit"
                        android:hint="@string/hint_phone"
                        android:inputType="number"
                        android:onTextChanged="@{(text, start, before, count)->model.onTextChange(text,model.EDIT_PHONE_TYPE)}"
                        android:paddingBottom="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="12dp"
                        android:singleLine="true"
                        android:text="@{model.mUser.phoneNumber}"
                        android:textSize="10sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/background_btn_main"
                        android:enabled="@{model.mPhoneConfirm ? false:true}"
                        android:foreground="?android:selectableItemBackground"
                        android:onClick="@{()->model.certifiedPhone()}"
                        android:padding="12dp"
                        android:text="@string/certified"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{model.showLoading?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>